--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
-</head>
+  <meta name="theme-color" content="/about/#fafafa">
+</head>:About
 
 <body>
   <!--[if IE]>
@@ -24,6 +24,7 @@
 
   <!-- Add your site or application content here -->
   <p>Kung Fu Penguin</p>
+  <p><a href="/about/">Kung Fu Penguin:About</a></p>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
