--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
   <!-- Add your site or application content here -->
   <p>Kung Fu Penguin</p>
   <p><a href="/about/">Kung Fu Penguin:About</a></p>
+  <p><script type="text/javascript">
+    setInterval(read,3000);
+    function read(){
+        jQuery.get('now.txt',function(data){document.write(data);});
+    }
+  </script></p>  
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
