Updating the site

--- a/sitemap.html
+++ b/sitemap.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>index</title>
+	<title>Index of kungfupenguin.tech</title>
 	<meta name='Generator' content='Zim 0.69.1'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,15 +40,11 @@
 
 <!-- Wiki content -->
 
-	<h1>index</h1>
+	<h1>Index of kungfupenguin.tech</h1>
 
-<p>
-Created Thursday 04 April 2019
-</p>
-
-<p>
-kungfupenguin.tech
-</p>
+<ul>
+<li><a href="./index.html" title="index" class="page">index</a></li>
+</ul>
 
 
 <!-- End wiki content -->
