Updating the site

--- a/index.html
+++ b/index.html
@@ -40,15 +40,10 @@
 
 <!-- Wiki content -->
 
-	<h1>index</h1>
-
-<p>
-Created Thursday 04 April 2019
+	<p>
+<a href="http://www.KungFuPenguin.tech" title="====== Kung Fu Penguin ======" class="http">====== Kung Fu Penguin ======</a>
 </p>
 
-<p>
-kungfupenguin.tech
-</p>
 
 
 <!-- End wiki content -->
