Updating the site

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <!-- based on a Pen by Devilish Alchemist @ http://codepen.io/devilishalchemist/pen/LERvpM -->
 <head>
   <meta charset="UTF-8">
-  <title>Index of kungfupenguin.tech</title>
+  <title>about</title>
 
   <link rel="stylesheet" href="./_resources/css/normalize.min.css">
   <link rel="stylesheet" href="./_resources/css/whhg.css">
@@ -27,7 +27,7 @@
 
     <div id="navigation">
       <ul>
-<li><a href="./about.html" title="about" class="page">about</a></li>
+<li><b>about</b></li>
 <li><a href="./index.html" title="index" class="page">index</a></li>
 </ul>
 
@@ -48,22 +48,19 @@
 
             <a id="navHome" href='./Home.html'><span><i class="icon icon-homealt"></i></span></a>
 
-            <span class='insen'><i class="icon icon-chevron-right"></i></span>
+            <a id="navNext" href='./index.html'><span><i class="icon icon-chevron-right"></i></span></a>
           </header>
 
           <section>
             <div class="page-title">
-              <h1><i class="icon icon-bookmarkalt"></i> Index of kungfupenguin.tech <a name='sitemap'></a></h1>
+              <h1><i class="icon icon-bookmarkalt"></i> about <a name='about'></a></h1>
             </div>
             <div class="fade fade-top"></div>
             <div class="page-body">
-              <ul>
-<li><a href="./about.html" title="about" class="page">about</a></li>
-<li><a href="./index.html" title="index" class="page">index</a>
-<ul>
-<li><a href="./index/wiki.html" title="wiki" class="page">wiki</a></li>
-</ul></li>
-</ul>
+              <p>
+Created Thursday 04 April 2019
+</p>
+
 
             </div>
             <div class="fade fade-bottom"></div>
