--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 
     <div id="navigation">
       <ul>
-<li><b>index</b></li>
+<li><a href="./about.html" title="about" class="page">about</a></li>
+<li><b>index</b>
+<ul>
+<li><a href="./index/wiki.html" title="wiki" class="page">wiki</a></li>
+</ul></li>
 </ul>
 
       <span class="zimversion">
@@ -43,11 +47,11 @@
       <div class="content_inner">
         <article>
           <header>
-            <span class='insen'><i class="icon icon-chevron-left"></i></span>
+            <a id="navPrev" href='./about.html'><span><i class="icon icon-chevron-left"></i></span></a>
 
             <a id="navHome" href='./Home.html'><span><i class="icon icon-homealt"></i></span></a>
 
-            <span class='insen'><i class="icon icon-chevron-right"></i></span>
+            <a id="navNext" href='./index/wiki.html'><span><i class="icon icon-chevron-right"></i></span></a>
           </header>
 
           <section>
@@ -60,8 +64,6 @@
 <p>
 <a href="http://www.KungFuPenguin.tech" title="Kung Fu Penguin" class="http">Kung Fu Penguin</a>
 </p>
-
-<br>
 
 
             </div>
