--- a/index/wiki.html
+++ b/index/wiki.html
@@ -3,12 +3,12 @@
 <!-- based on a Pen by Devilish Alchemist @ http://codepen.io/devilishalchemist/pen/LERvpM -->
 <head>
   <meta charset="UTF-8">
-  <title>Index of kungfupenguin.tech</title>
+  <title>wiki</title>
 
-  <link rel="stylesheet" href="./_resources/css/normalize.min.css">
-  <link rel="stylesheet" href="./_resources/css/whhg.css">
-  <link rel="stylesheet" href="./_resources/css/fonts.css">
-  <link rel="stylesheet" href="./_resources/css/style.css">
+  <link rel="stylesheet" href="../_resources/css/normalize.min.css">
+  <link rel="stylesheet" href="../_resources/css/whhg.css">
+  <link rel="stylesheet" href="../_resources/css/fonts.css">
+  <link rel="stylesheet" href="../_resources/css/style.css">
 
 </head>
 
@@ -27,8 +27,11 @@
 
     <div id="navigation">
       <ul>
-<li><a href="./about.html" title="about" class="page">about</a></li>
-<li><a href="./index.html" title="index" class="page">index</a></li>
+<li><a href="../about.html" title="about" class="page">about</a></li>
+<li><a href="../index.html" title="index" class="page">index</a>
+<ul>
+<li><b>wiki</b></li>
+</ul></li>
 </ul>
 
       <span class="zimversion">
@@ -44,26 +47,23 @@
       <div class="content_inner">
         <article>
           <header>
-            <span class='insen'><i class="icon icon-chevron-left"></i></span>
+            <a id="navPrev" href='../index.html'><span><i class="icon icon-chevron-left"></i></span></a>
 
-            <a id="navHome" href='./Home.html'><span><i class="icon icon-homealt"></i></span></a>
+            <a id="navHome" href='../Home.html'><span><i class="icon icon-homealt"></i></span></a>
 
             <span class='insen'><i class="icon icon-chevron-right"></i></span>
           </header>
 
           <section>
             <div class="page-title">
-              <h1><i class="icon icon-bookmarkalt"></i> Index of kungfupenguin.tech <a name='sitemap'></a></h1>
+              <h1><i class="icon icon-bookmarkalt"></i> wiki <a name='index:wiki'></a></h1>
             </div>
             <div class="fade fade-top"></div>
             <div class="page-body">
-              <ul>
-<li><a href="./about.html" title="about" class="page">about</a></li>
-<li><a href="./index.html" title="index" class="page">index</a>
-<ul>
-<li><a href="./index/wiki.html" title="wiki" class="page">wiki</a></li>
-</ul></li>
-</ul>
+              <p>
+Created Thursday 04 April 2019
+</p>
+
 
             </div>
             <div class="fade fade-bottom"></div>
@@ -77,8 +77,8 @@
     </main>
   </div>
 
-  <script src="./_resources/js/jquery.v2.1.3.min.js"></script>
-  <script src="./_resources/js/index.js"></script>
+  <script src="../_resources/js/jquery.v2.1.3.min.js"></script>
+  <script src="../_resources/js/index.js"></script>
 
 </body>
 </html>
