Updating the site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- based on a Pen by Devilish Alchemist @ http://codepen.io/devilishalchemist/pen/LERvpM -->
 <head>
   <meta charset="UTF-8">
-  <title>index</title>
+  <title>Home</title>
 
   <link rel="stylesheet" href="./_resources/css/normalize.min.css">
   <link rel="stylesheet" href="./_resources/css/whhg.css">
@@ -56,14 +56,15 @@
 
           <section>
             <div class="page-title">
-              <h1><i class="icon icon-bookmarkalt"></i> index <a name='index'></a></h1>
+              <h1><i class="icon icon-bookmarkalt"></i> Home <a name='index'></a></h1>
             </div>
             <div class="fade fade-top"></div>
             <div class="page-body">
-              
-<p>
+              <p>
 <a href="http://www.KungFuPenguin.tech" title="Kung Fu Penguin" class="http">Kung Fu Penguin</a>
 </p>
+
+<br>
 
 
             </div>
