--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
       <ul>
 <li><b>about</b></li>
 <li><a href="./index.html" title="index" class="page">index</a></li>
+<li><a href="./wiki.html" title="wiki" class="page">wiki</a></li>
 </ul>
 
       <span class="zimversion">
