--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
     <div id="navigation">
       <ul>
 <li><a href="./about.html" title="about" class="page">about</a></li>
-<li><b>index</b>
-<ul>
-<li><a href="./index/wiki.html" title="wiki" class="page">wiki</a></li>
-</ul></li>
+<li><b>index</b></li>
+<li><a href="./wiki.html" title="wiki" class="page">wiki</a></li>
 </ul>
 
       <span class="zimversion">
@@ -51,7 +49,7 @@
 
             <a id="navHome" href='./Home.html'><span><i class="icon icon-homealt"></i></span></a>
 
-            <a id="navNext" href='./index/wiki.html'><span><i class="icon icon-chevron-right"></i></span></a>
+            <a id="navNext" href='./wiki.html'><span><i class="icon icon-chevron-right"></i></span></a>
           </header>
 
           <section>
