--- a/sitemap.html
+++ b/sitemap.html
@@ -29,6 +29,7 @@
       <ul>
 <li><a href="./about.html" title="about" class="page">about</a></li>
 <li><a href="./index.html" title="index" class="page">index</a></li>
+<li><a href="./wiki.html" title="wiki" class="page">wiki</a></li>
 </ul>
 
       <span class="zimversion">
@@ -59,10 +60,8 @@
             <div class="page-body">
               <ul>
 <li><a href="./about.html" title="about" class="page">about</a></li>
-<li><a href="./index.html" title="index" class="page">index</a>
-<ul>
-<li><a href="./index/wiki.html" title="wiki" class="page">wiki</a></li>
-</ul></li>
+<li><a href="./index.html" title="index" class="page">index</a></li>
+<li><a href="./wiki.html" title="wiki" class="page">wiki</a></li>
 </ul>
 
             </div>
