--- a/wiki.html
+++ b/wiki.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <title>wiki</title>
 
-  <link rel="stylesheet" href="../_resources/css/normalize.min.css">
-  <link rel="stylesheet" href="../_resources/css/whhg.css">
-  <link rel="stylesheet" href="../_resources/css/fonts.css">
-  <link rel="stylesheet" href="../_resources/css/style.css">
+  <link rel="stylesheet" href="./_resources/css/normalize.min.css">
+  <link rel="stylesheet" href="./_resources/css/whhg.css">
+  <link rel="stylesheet" href="./_resources/css/fonts.css">
+  <link rel="stylesheet" href="./_resources/css/style.css">
 
 </head>
 
@@ -27,11 +27,9 @@
 
     <div id="navigation">
       <ul>
-<li><a href="../about.html" title="about" class="page">about</a></li>
-<li><a href="../index.html" title="index" class="page">index</a>
-<ul>
+<li><a href="./about.html" title="about" class="page">about</a></li>
+<li><a href="./index.html" title="index" class="page">index</a></li>
 <li><b>wiki</b></li>
-</ul></li>
 </ul>
 
       <span class="zimversion">
@@ -47,16 +45,16 @@
       <div class="content_inner">
         <article>
           <header>
-            <a id="navPrev" href='../index.html'><span><i class="icon icon-chevron-left"></i></span></a>
+            <a id="navPrev" href='./index.html'><span><i class="icon icon-chevron-left"></i></span></a>
 
-            <a id="navHome" href='../Home.html'><span><i class="icon icon-homealt"></i></span></a>
+            <a id="navHome" href='./Home.html'><span><i class="icon icon-homealt"></i></span></a>
 
             <span class='insen'><i class="icon icon-chevron-right"></i></span>
           </header>
 
           <section>
             <div class="page-title">
-              <h1><i class="icon icon-bookmarkalt"></i> wiki <a name='index:wiki'></a></h1>
+              <h1><i class="icon icon-bookmarkalt"></i> wiki <a name='wiki'></a></h1>
             </div>
             <div class="fade fade-top"></div>
             <div class="page-body">
@@ -76,8 +74,8 @@ Created Thursday 04 April 2019
     </main>
   </div>
 
-  <script src="../_resources/js/jquery.v2.1.3.min.js"></script>
-  <script src="../_resources/js/index.js"></script>
+  <script src="./_resources/js/jquery.v2.1.3.min.js"></script>
+  <script src="./_resources/js/index.js"></script>
 
 </body>
 </html>
