--- a/wiki.html
+++ b/wiki.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <title>wiki</title>
 
-  <link rel="stylesheet" href="./_resources/css/normalize.min.css">
-  <link rel="stylesheet" href="./_resources/css/whhg.css">
-  <link rel="stylesheet" href="./_resources/css/fonts.css">
-  <link rel="stylesheet" href="./_resources/css/style.css">
+  <link rel="stylesheet" href="./resources/css/normalize.min.css">
+  <link rel="stylesheet" href="./resources/css/whhg.css">
+  <link rel="stylesheet" href="./resources/css/fonts.css">
+  <link rel="stylesheet" href="./resources/css/style.css">
 
 </head>
 
@@ -74,8 +74,8 @@ Created Thursday 04 April 2019
     </main>
   </div>
 
-  <script src="./_resources/js/jquery.v2.1.3.min.js"></script>
-  <script src="./_resources/js/index.js"></script>
+  <script src="./resources/js/jquery.v2.1.3.min.js"></script>
+  <script src="./resources/js/index.js"></script>
 
 </body>
 </html>
