Updating the site

--- a/wiki.html
+++ b/wiki.html
@@ -101,26 +101,26 @@ Created Thursday 04 April 2019
         </div>
         <div class="collapsible-nav" id="mw-panel">
             <div id="p-logo" role="banner">
-                <a style="background-image: url(./resources/logo.png);" href="./kungfupenguin.tech/index.html" title="Visit the main page"><span></span></a>
+                <a style="background-image: url(./resources/logo.png);" href="file:///%3Aindex" title="Visit the main page"><span></span></a>
             </div>
             <div class="portal first persistent" role="navigation" id="p-navigation" aria-labelledby="p-navigation-label">
                 <h3 id="p-navigation-label">Navigation</h3>
                 <div class="body">
                     <ul>
-                        <li ><a href="./kungfupenguin.tech/index.html">Main page</a></li>
-                        <li ><a href="./kungfupenguin.tech/How_To.html">How To</a></li>
-                        <li ><a href="./kungfupenguin.tech/Troubleshooting.html">Troubleshoting</a></li>
-                        <li ><a href="./kungfupenguin.tech/Technical_Notes.html">Technical Notes</a></li>
-                        <li ><a href="./kungfupenguin.tech/Tools_and_Scripts.html">Tools and Scripts</a></li>
+                        <li ><a href="file:///%3Aindex">Main page</a></li>
+                        <li ><a href="file:///%3AHow%20To">How To</a></li>
+                        <li ><a href="file:///%3ATroubleshooting">Troubleshoting</a></li>
+                        <li ><a href="file:///%3ATechnical%20Notes">Technical Notes</a></li>
+                        <li ><a href="file:///%3ATools%20and%20Scripts">Tools and Scripts</a></li>
                     </ul>
                 </div>
             </div>
             <div class="portal">
             	<div style="display: block;" class="body">
             		<ul id="p-tb-list">
-                        <li><a href="./kungfupenguin.tech/Catalog.html" title="Index">Index</a></li>
-                        <li><a href="./kungfupenguin.tech/About.html" title="About">About</a></li>
-                        <li><a href="./kungfupenguin.tech/Contact_Info.html" title="Contact Info">Contact Info</a></li>
+                        <li><a href="file:///%3ACatalog" title="Index">Index</a></li>
+                        <li><a href="file:///%3AAbout" title="About">About</a></li>
+                        <li><a href="file:///%3AContact%20Info" title="Contact Info">Contact Info</a></li>
             		</ul>
             	</div>
             </div>
