Updating the site

--- a/os.html
+++ b/os.html
@@ -32,6 +32,7 @@
 <li><b>os</b>
 <ul>
 <li><a href="./os/arch.html" title="arch" class="page">arch</a></li>
+<li><a href="./os/fedora.html" title="fedora" class="page">fedora</a></li>
 </ul>
 </li>
 <li><a href="./wiki.html" title="wiki" class="page">wiki</a></li>
