--- a/os/arch.html
+++ b/os/arch.html
@@ -32,6 +32,7 @@
 <li><a href="../os.html" title="os" class="page">os</a>
 <ul>
 <li><b>arch</b></li>
+<li><a href="./fedora.html" title="fedora" class="page">fedora</a></li>
 </ul>
 </li>
 <li><a href="../wiki.html" title="wiki" class="page">wiki</a></li>
@@ -54,7 +55,7 @@
 
             <a id="navHome" href='../Home.html'><span><i class="icon icon-homealt"></i></span></a>
 
-            <a id="navNext" href='../wiki.html'><span><i class="icon icon-chevron-right"></i></span></a>
+            <a id="navNext" href='./fedora.html'><span><i class="icon icon-chevron-right"></i></span></a>
           </header>
 
           <section>
