--- a/os/fedora.html
+++ b/os/fedora.html
@@ -3,12 +3,12 @@
 <!-- based on a Pen by Devilish Alchemist @ http://codepen.io/devilishalchemist/pen/LERvpM -->
 <head>
   <meta charset="UTF-8">
-  <title>wiki</title>
+  <title>fedora</title>
 
-  <link rel="stylesheet" href="./resources/css/normalize.min.css">
-  <link rel="stylesheet" href="./resources/css/whhg.css">
-  <link rel="stylesheet" href="./resources/css/fonts.css">
-  <link rel="stylesheet" href="./resources/css/style.css">
+  <link rel="stylesheet" href="../resources/css/normalize.min.css">
+  <link rel="stylesheet" href="../resources/css/whhg.css">
+  <link rel="stylesheet" href="../resources/css/fonts.css">
+  <link rel="stylesheet" href="../resources/css/style.css">
 
 </head>
 
@@ -27,10 +27,15 @@
 
     <div id="navigation">
       <ul>
-<li><a href="./about.html" title="about" class="page">about</a></li>
-<li><a href="./index.html" title="index" class="page">index</a></li>
-<li><a href="./os.html" title="os" class="page">os</a></li>
-<li><b>wiki</b></li>
+<li><a href="../about.html" title="about" class="page">about</a></li>
+<li><a href="../index.html" title="index" class="page">index</a></li>
+<li><a href="../os.html" title="os" class="page">os</a>
+<ul>
+<li><a href="./arch.html" title="arch" class="page">arch</a></li>
+<li><b>fedora</b></li>
+</ul>
+</li>
+<li><a href="../wiki.html" title="wiki" class="page">wiki</a></li>
 </ul>
 
       <span class="zimversion">
@@ -46,24 +51,20 @@
       <div class="content_inner">
         <article>
           <header>
-            <a id="navPrev" href='./os/fedora.html'><span><i class="icon icon-chevron-left"></i></span></a>
+            <a id="navPrev" href='./arch.html'><span><i class="icon icon-chevron-left"></i></span></a>
 
-            <a id="navHome" href='./Home.html'><span><i class="icon icon-homealt"></i></span></a>
+            <a id="navHome" href='../Home.html'><span><i class="icon icon-homealt"></i></span></a>
 
-            <span class='insen'><i class="icon icon-chevron-right"></i></span>
+            <a id="navNext" href='../wiki.html'><span><i class="icon icon-chevron-right"></i></span></a>
           </header>
 
           <section>
             <div class="page-title">
-              <h1><i class="icon icon-bookmarkalt"></i> wiki <a name='wiki'></a></h1>
+              <h1><i class="icon icon-bookmarkalt"></i> fedora <a name='os:fedora'></a></h1>
             </div>
             <div class="fade fade-top"></div>
             <div class="page-body">
-              <p>
-Created Thursday 04 April 2019
-</p>
-
-
+              
             </div>
             <div class="fade fade-bottom"></div>
           </section>
@@ -76,8 +77,8 @@ Created Thursday 04 April 2019
     </main>
   </div>
 
-  <script src="./resources/js/jquery.v2.1.3.min.js"></script>
-  <script src="./resources/js/index.js"></script>
+  <script src="../resources/js/jquery.v2.1.3.min.js"></script>
+  <script src="../resources/js/index.js"></script>
 
 </body>
 </html>
