--- a/sitemap.html
+++ b/sitemap.html
@@ -65,6 +65,7 @@
 <li><a href="./os.html" title="os" class="page">os</a>
 <ul>
 <li><a href="./os/arch.html" title="arch" class="page">arch</a></li>
+<li><a href="./os/fedora.html" title="fedora" class="page">fedora</a></li>
 </ul>
 </li>
 <li><a href="./wiki.html" title="wiki" class="page">wiki</a></li>
