--- a/dev/index.html
+++ b/dev/index.html
@@ -8,8 +8,8 @@
 </script>
 <script> 
 $(function(){
-  $("#header").load("header.html"); 
-  $("#footer").load("footer.html"); 
+  $("#header").load("/dev/header.html"); 
+  $("#footer").load("/dev/footer.html"); 
 });
 </script> 
 </head>
