--- a/dev/index.html
+++ b/dev/index.html
@@ -18,5 +18,6 @@ $(function(){
 <!--Remaining section-->
 <h1>Main Body</h1>
 <div id="footer"></div>
+<!--#include virtual="/dev/footer.html" -->
 </body>
 </html>
