--- a/dev/menu.html
+++ b/dev/menu.html
@@ -6,7 +6,7 @@
       <link href="layout.css" rel="stylesheet" />
 
       <!-- Include jQuery.mmenu .css files -->
-      <link href="path/to/jquery.mmenu.css" rel="stylesheet" />
+      <link href="/resource/css/jquery.mmenu.css" rel="stylesheet" />
 
 <script
     src="https://code.jquery.com/jquery-3.3.1.js"
@@ -20,7 +20,7 @@ $(function(){
 </script> 
 
       <!-- Include jQuery and the jQuery.mmenu .js files -->
-      <script src="path/to/js/jquery.mmenu.all.js"></script>
+      <script src="/resource/js/jquery.mmenu.all.js"></script>
 
       <!-- Fire the plugin onDocumentReady -->
       <script>
