--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>index</title>
+  <title>www.KungFuPenguin.Tech</title>
 
   <link rel="stylesheet" href="./resources/css/normalize.min.css">
   <link rel="stylesheet" href="./resources/css/whhg.css">
