--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>www.KungFuPenguin.Tech</title>
-
+  <title>Kung Fu Penguin Tech</title>
   <link rel="stylesheet" href="./resources/css/normalize.min.css">
   <link rel="stylesheet" href="./resources/css/whhg.css">
   <link rel="stylesheet" href="./resources/css/fonts.css">
