--- a/dev/menu.html
+++ b/dev/menu.html
@@ -74,8 +74,10 @@ $(function(){
             <li><a href="/">Home</a></li>
             <li id="my-item"><a href="/about/">About us</a></li>
             <li><a href="/contact/">Contact</a></li>
+            <div class=".mm-listview">
+               
+            </div>
          </ul>
-            <div id="my-menu"></div>
       </nav>
 
    </body>
