--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <header>
             <a id="navPrev" href='./about.html'><span><i class="icon icon-chevron-left"></i></span></a>
 
-            <a id="navHome" href='./Home.html'><span><i class="icon icon-homealt"></i></span></a>
+            <a id="navHome" href='./index.html'><span><i class="icon icon-homealt"></i></span></a>
 
             <a id="navNext" href='./os.html'><span><i class="icon icon-chevron-right"></i></span></a>
           </header>
