--- a/os/fedora.html
+++ b/os/fedora.html
@@ -53,7 +53,7 @@
           <header>
             <a id="navPrev" href='./arch.html'><span><i class="icon icon-chevron-left"></i></span></a>
 
-            <a id="navHome" href='../Home.html'><span><i class="icon icon-homealt"></i></span></a>
+            <a id="navHome" href='../index.html'><span><i class="icon icon-homealt"></i></span></a>
 
             <a id="navNext" href='../wiki.html'><span><i class="icon icon-chevron-right"></i></span></a>
           </header>
