--- a/wiki.html
+++ b/wiki.html
@@ -48,7 +48,7 @@
           <header>
             <a id="navPrev" href='./os/fedora.html'><span><i class="icon icon-chevron-left"></i></span></a>
 
-            <a id="navHome" href='./Home.html'><span><i class="icon icon-homealt"></i></span></a>
+            <a id="navHome" href='./index.html'><span><i class="icon icon-homealt"></i></span></a>
 
             <span class='insen'><i class="icon icon-chevron-right"></i></span>
           </header>
