--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
           <header>
             <span class='insen'><i class="icon icon-chevron-left"></i></span>
 
-            <a id="navHome" href='./Home.html'><span><i class="icon icon-homealt"></i></span></a>
+            <a id="navHome" href='./index.html'><span><i class="icon icon-homealt"></i></span></a>
 
             <a id="navNext" href='./index.html'><span><i class="icon icon-chevron-right"></i></span></a>
           </header>
