--- a/dev/menu.html
+++ b/dev/menu.html
@@ -9,7 +9,7 @@
       <link href="/resource/css/jquery.mmenu.css" rel="stylesheet" />
 
 <script
-    src="https://code.jquery.com/jquery-3.3.1.js"
+    src="http://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous">
 </script>
