--- a/dev/index.html
+++ b/dev/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>dev</title>
-<script
-    src="https://code.jquery.com/jquery-3.3.1.js"
+<script>
+    src="http://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous">
 </script>
@@ -18,6 +18,5 @@ $(function(){
 <!--Remaining section-->
 <h1>Main Body</h1>
 <div id="footer"></div>
-<!--#include virtual="/dev/footer.html" -->
 </body>
 </html>
