--- a/dev/index.html
+++ b/dev/index.html
@@ -1,10 +1,7 @@
 <html>
 <head>
 <title>dev</title>
-<script
-    src="http://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous">
+<script src="http://code.jquery.com/jquery-3.3.1.js">
 </script>
 <script> 
 $(function(){
