--- a/dev/menu.html
+++ b/dev/menu.html
@@ -8,8 +8,7 @@
       <!-- Include jQuery.mmenu .css files -->
       <link href="/resource/css/jquery.mmenu.css" rel="stylesheet" />
 
-<script>
-    src="http://code.jquery.com/jquery-3.3.1.js"
+<script src="http://code.jquery.com/jquery-3.3.1.js">
 </script>
 <script> 
 $(function(){
